# IT_School-21

./: README.md
Task-/: Readme.md
Task0/: CMakeLists.txt  README.md  Readme  Task0
Task1/: CMakeLists.txt  README.md  downloader.cpp  downloader.h  main.cpp
Task1/src/: downloader.cpp  downloader.h  main.cpp
Task2/: CMakeLists.txt  consumer.cpp  consumer.h  producer.cpp  producer.h  readme.md
Task2/src/: consumer.cpp  consumer.h  producer.cpp  producer.h
